# arta

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  go.mod  go.sum  main.go
.github/workflows/: publish-crates-io.yml  release.yml
docs/: architecture.md  implementation-log.md
docs/superpowers/specs/: 2026-04-02-ratatui-rewrite-design.md
inputpanel/: inputpanel.go
keytest/: main.go
sidebar/: sidebar.go
src/: app.rs  claude_hook.rs  config.rs  input_panel.rs  keys.rs  main.rs  multiplexer.rs  sidebar.rs  terminal_pane.rs  tmux.rs  welcome.rs  workspace.rs
workspace/: workspace.go
