[package]
name = "arta-tui"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Terminal workspace manager for concurrent AI coding agent sessions (tmux/zellij)"
repository = "https://github.com/cjurjiu/arta"
homepage = "https://github.com/cjurjiu/arta"
readme = "README.md"
authors = ["Catalin Jurjiu (https://github.com/cjurjiu)"]
keywords = ["tui", "tmux", "zellij", "claude", "agent"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["target/", "docs/", ".github/", "CLAUDE.md"]

[[bin]]
name = "arta"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-term = "0.2"
vt100 = "0.15"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
